Correct top bar for z-index

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -31,6 +31,7 @@ tbody tr:hover {
 
 #top_bar {
   position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
   right: 0;
