--- a/app/assets/stylesheets/ranch_mares.scss
+++ b/app/assets/stylesheets/ranch_mares.scss
@@ -29,7 +29,7 @@ td.expecting {
   }
 
   .links {
-    margin-top: 20px;
+    margin-top: -60px;
 
     .links_to_mares {
       margin-top: 20px;
@@ -40,7 +40,7 @@ td.expecting {
     }
 
     .label {
-      margin-right: 30px;
+      margin-right: 20px;
     }
   }
 }
